  Bugfixes:
    - Fixed price of Rifle Ammo in AWESOME shop
    - Fixed incorrect icons for resource wells
    - Fixed that Water Extractors did not show on the map
    - Fixed map colour of Splitters/Mergers
    - Fixed Alt Recipe selection screen not showing byproducts properly
    - Fixed that Loader Conveyors were destructible (mostly by Nobelisk explosion)
---------------------------------------------------------------------------------------------------
Version: 0.6.6
Date: 2021.06.13
  Changes:
    - Increased stack size of all Buildings so that the Build Gun can better show affordable amount
    - Added "Scanner" icon to resource/object scan "recipe" icons
    - Added custom icons for "nothing"-type technology effects
  Bugfixes:
    - Fixed incorrect locale for capsule item tooltips
    - More locale fixes
    - Fixed cost of underground belts/pipes (was double what it should have been)
    - Fix that, in the rare case Foundation snaps to clip into another Foundation, both would be immovable
---------------------------------------------------------------------------------------------------
Version: 0.6.7
Date: 2021.06.17
  Optimisations:
    - Greatly reduced processing time of Radioactivity. If it's still too much, use /toggle-radiation command to disable radiation in-game.
    - Reworked power production buildings.
  Ease of use:
    - Tabs for composite entities (Truck Station, Drone Port) now disable themselves if you are out of range of that component
    - You must now Shift-click to trash equipment, so you don't accidentally trash it when you meant to equip it.
---------------------------------------------------------------------------------------------------
Version: 0.6.8
Date: ????
  Changes:
    - Renamed various creature entities to their Satisfactory equivalents
  Balancing:
    - Decreased mining time of resource deposits
  Bugfixes:
    - Fixed train station not appearing on map
    - Fixed buggy Tips+Tricks